--- a/blocks/elements/__like/elements__like.css
+++ b/blocks/elements/__like/elements__like.css
@@ -1,7 +1,7 @@
 .elements__like{
     display: flex;
     padding: 0;
-    margin-right: 0;
+    margin-left: auto;
     justify-self: flex-end;
     background-color: #fff;
     border: none;
@@ -11,5 +11,4 @@
     max-width: 22px;
     min-height: 19px;
     max-height: 19px;
-
 }
