--- a/blocks/elements/elements.css
+++ b/blocks/elements/elements.css
@@ -9,5 +9,13 @@
     grid-template-rows: repeat(2, 1fr);
     grid-row-gap: 20px;
     grid-column-gap: 17px;
-    max-width: 880px;
+    max-width: 882px;
+}
+@media screen and (max-width: 767px) {
+    .elements {
+        max-width: 282px;
+        display: flex;
+        flex-direction: column;
+        margin-top: 36px;
+    }
 }
