--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -7,5 +7,9 @@
 }
 
 @media screen and (max-width: 767px) {
-    .header__logo {}
+    .header__logo {
+        max-width: 103.74px;
+        margin-bottom: 31.6px;
+        margin-left: 27px;
+    }
 }
