--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,20 +2,17 @@
     display: flex;
     position: relative;
     margin-top: 45px;
-    margin-bottom: 41px;
+    margin-bottom: 40px;
     max-width: 880px;
     margin-left: auto;
     margin-right: auto;
     border-bottom: 1px solid rgba(54, 54, 54, .7);
-@media screen and (max-width: 1279px) {
-    .header {}
-}
-
-
-@media screen and (max-width: 1023px) {
-    .header {}
 }
 
 @media screen and (max-width: 767px) {
-    .header {}
+    .header {
+        max-width: 320px;
+        margin-top: 28px;
+        margin-bottom: 42px;
+    }
 }
