--- a/blocks/profile/__avatar/profile__avatar.css
+++ b/blocks/profile/__avatar/profile__avatar.css
@@ -3,7 +3,12 @@
     margin: 0;
     padding: 0;
     border-radius: 50%;
-    min-width: 168.75px;
-    min-width: 168.75px;
-    object-fit: cover;
+    min-width: 150px;
+    object-fit: contain;
+}
+
+@media screen and (max-width: 767px) {
+    .profile__avatar {
+        min-width: 120px;
+    }
 }
