--- a/blocks/profile/__button-edit/profile__button-edit.css
+++ b/blocks/profile/__button-edit/profile__button-edit.css
@@ -1,9 +1,21 @@
-.profile__button-edit{
+.profile__button-edit {
     display: flex;
+    margin: 0;
+    margin-left: 18px;
+    padding: 0;
     background-color: black;
     border: none;
     background-image: url(../../../images/Edit-Button.svg);
     background-repeat: no-repeat;
+    background-size: contain;
     min-width: 24px;
     min-height: 24px;
+}
+
+@media screen and (max-width: 767px) {
+    .profile__button-edit {
+        min-width: 18px;
+        min-height: 18px;
+        margin-left: 10px;
+    }
 }
