--- a/blocks/profile/__image/profile__image.css
+++ b/blocks/profile/__image/profile__image.css
@@ -1,9 +1,8 @@
 .profile__image {
     display: flex;
-    margin: auto;
+    margin: 0;
     padding: 0;
     border-radius: 50%;
-    min-width: 127.5px;
-    min-width: 127.5px;
-    object-fit: cover;
+    min-width: 120px;
+    min-width: 120px;
 }
