--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -4,3 +4,13 @@
     padding: 0;
     max-width: 880px;
 }
+
+
+@media screen and (max-width: 767px) {
+    .profile {
+        flex-direction: column;
+        max-width: 282px;
+        align-items: center;
+        justify-content: center;
+    }
+}
