--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -14,6 +14,11 @@
     line-height: normal;
 }
 
+@media screen and (max-width: 1023px) {
+    .footer {
+        max-width: 768px;
+    }
+}
 
 @media screen and (max-width: 767px) {
     .footer {
