--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -9,6 +9,12 @@
     border-bottom: 1px solid rgba(54, 54, 54, .7);
 }
 
+@media screen and (max-width: 1023px) {
+    .header {
+        max-width: 768px;
+    }
+}
+
 @media screen and (max-width: 767px) {
     .header {
         max-width: 320px;
