--- a/blocks/profile/__about/profile__about.css
+++ b/blocks/profile/__about/profile__about.css
@@ -1,11 +1,13 @@
 .profile__about {
-    display: flex;
     margin: 0;
     padding: 0;
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 767px) {
