--- a/blocks/profile/__button-edit/profile__button-edit.css
+++ b/blocks/profile/__button-edit/profile__button-edit.css
@@ -12,6 +12,11 @@
     min-height: 24px;
 }
 
+.profile__button-edit:hover {
+    opacity: 0.8;
+    cursor: pointer;
+}
+
 @media screen and (max-width: 767px) {
     .profile__button-edit {
         min-width: 18px;
