--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -1,11 +1,13 @@
 .profile__name {
-    display: flex;
     margin: 0;
     padding: 0;
     font-size: 42px;
     font-style: normal;
     font-weight: 500;
     line-height: 48px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 @media screen and (max-width: 767px) {
