--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -5,6 +5,11 @@
     max-width: 880px;
 }
 
+@media screen and (max-width: 1023px) {
+    .profile {
+        max-width: 768px;
+    }
+}
 
 @media screen and (max-width: 767px) {
     .profile {
