--- a/pages/index.css
+++ b/pages/index.css
@@ -19,3 +19,12 @@
 @import url(../blocks/elements/__text/elements__text.css);
 @import url(../blocks/elements/__like/elements__like.css);
 @import url(../blocks/footer/footer.css);
+@import url(../blocks/pop-up/pop-up.css);
+@import url(../blocks/pop-up/__form/pop-up__form.css);
+@import url(../blocks/pop-up/__edit/pop-up__edit.css);
+@import url(../blocks/pop-up/__name/pop-up__name.css);
+@import url(../blocks/pop-up/__info/pop-up__info.css);
+@import url(../blocks/pop-up/__button-edit/pop-up__button-edit.css);
+@import url(../blocks/pop-up/__button-close/pop-up__button-close.css);
+@import url(../blocks/pop-up/_hide/pop-up__hide.css);
+@import url(../blocks/elements/__like/_active/elements__element__like_active.css);
