--- a/blocks/pop-up/__input/pop-up__input.css
+++ b/blocks/pop-up/__input/pop-up__input.css
@@ -1,4 +1,5 @@
-.pop-up__name {
+.pop-up__input {
+    margin-top: 0;
     display: flex;
     position: relative;
     padding: 0;
@@ -12,7 +13,7 @@
 }
 
 @media screen and (max-width: 767px) {
-    .pop-up__name {
+    .pop-up__input {
         max-width: 238px;
     }
 }
