--- a/blocks/pop-up/__form/pop-up__form.css
+++ b/blocks/pop-up/__form/pop-up__form.css
@@ -3,6 +3,7 @@
     position: relative;
     flex-direction: column;
     width: 430px;
+    height: 330px;
     color: #000;
     font-size: 14px;
     font-style: normal;
