--- a/blocks/pop-up/pop-up.css
+++ b/blocks/pop-up/pop-up.css
@@ -1,7 +1,10 @@
 .pop-up {
     display: flex;
-    margin: auto;
     flex-direction: column;
+    position: fixed;
+    top: 195px;
+    left: 425px;
+    right: 425px;
     z-index: 1;
     width: 430px;
     height: 330px;
@@ -17,6 +20,10 @@
 @media screen and (max-width: 767px) {
     .pop-up {
         max-width: 282px;
-        margin: auto;
+        top: 123px;
+        left: 0;
+        right: 0;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
