--- a/blocks/profile/__name/profile__name.css
+++ b/blocks/profile/__name/profile__name.css
@@ -4,6 +4,7 @@
     font-size: 42px;
     font-style: normal;
     font-weight: 500;
+    line-height: 48px;
     text-overflow: ellipsis;
     white-space: nowrap;
 }
