--- a/pages/index.css
+++ b/pages/index.css
@@ -29,5 +29,9 @@
 @import url(../blocks/pop-up/__info/pop-up_info.css);
 @import url(../blocks/pop-up/__button-edit/pop-up__button-edit.css);
 @import url(../blocks/pop-up/__button-close/pop-up__button-close.css);
+@import url(../blocks/elements/__thrash/elements__thrash.css);
+@import url(../blocks/pop-up/__picture/pop-up__picture.css);
+@import url(../blocks/pop-up/__fullpicture/pop-up__fullpicture.css);
+@import url(../blocks/pop-up/__picOpen/pop-up__picOpen.css);
 @import url(../blocks/pop-up/_hide/pop-up__all_active.css);
 @import url(../blocks/elements/__like/_active/elements__like_active.css);
