--- a/blocks/pop-up/__button-close/_full/pop-up__button-close_full.css
+++ b/blocks/pop-up/__button-close/_full/pop-up__button-close_full.css
@@ -1,4 +1,4 @@
-.pop-up__button-close {
+.pop-up__button-close_full {
     padding: 0;
     position: absolute;
     top: -40px;
@@ -7,17 +7,17 @@
     height: 32px;
     object-fit: contain;
     border: none;
-    background-image: url(../../../images/Close_Icon.png);
+    background-image: url(../../../../images/Close_Icon.png);
     background-color: transparent;
 }
 
-.pop-up__button-close:hover {
+.pop-up__button-close_full:hover {
     cursor: pointer;
     opacity: 0.6;
 }
 
 @media screen and (max-width: 767px) {
-    .pop-up__button-close {
+    .pop-up__button-close_full {
         width: 20px;
         height: 20px;
         right: 19px;
