--- a/blocks/pop-up/__pictureNew-popup/pictureNew-popup.css
+++ b/blocks/pop-up/__pictureNew-popup/pictureNew-popup.css
@@ -1,4 +1,4 @@
-.profile-popup {
+.pictureNew-popup {
     display: flex;
     visibility: hidden;
     transition: visibility 0.5s, opacity 0.5s linear;
@@ -14,7 +14,7 @@
 }
 
 @media screen and (max-width: 767px) {
-    .profile-popup {
+    .pictureNew-popup {
         min-width: 0;
         min-height: 0;
         max-width: 282px;
